<resources>
    <string name="app_name">For Your Trip</string>
    <string name="RiverFront">River Front</string>
    <string name="RiverFrontInfo">Sabarmati Riverfront is a waterfront being developed along the banks of Sabarmati river in Ahmedabad, India. Proposed in the 1960s, the construction began in 2005. Since 2012, under Phase 1, the waterfront is gradually opened to public as and when facilities are constructed and various facilities are actively under construction. The major objectives of project are environment improvement, social infrastructure and sustainable development. Phase 2 was approved in 2020.</string>
    <string name="KankariaLake">Kankaria Lake</string>
    <string name="KankariaInfo">Kankaria Lake is the second largest lake in Ahmedabad in the Indian state of Gujarat. It is located in the south-eastern part of the city, in the Maninagar area. It was completed in 1451 during the reign of Sultan Qutb-ud-Din Ahmad Shah II though its origin is placed in the Chaulukya period sometimes. A lakefront is developed around it, which has many public attractions such as a zoo, toy train, kids city, tethered balloon ride, water rides, water park, food stalls, and entertainment facilities.</string>
    <string name="SabarmatiAshram">Sabarmati Ashram</string>
    <string name="SabarmatiInfo">Sabarmati Ashram (also known as Gandhi Ashram) is located in the Sabarmati suburb of Ahmedabad, Gujarat, adjoining the Ashram Road, on the banks of the River Sabarmati, 4 miles (6.4 km) from the town hall. This was one of the many residences of Mahatma Gandhi who lived at Sabarmati and Sevagram. when he was not travelling across India or in prison.He lived in Sabarmati or Wardha for a total of twelve years with his wife Kasturba Gandhi and followers, including Vinoba Bhave.</string>
    <string name="ScienceCity">Science City</string>
    <string name="ScienceInfo">Gujarat Science City is a science education and entertainment centre located in Ahmedabad, Gujarat, India. Opened in 2002 and expanded in 2021, it has an IMAX 3D theatre; exhibitions on science, space, energy park, life science park, planet earth, hall of science, musical fountain, thrill ride, plants, nature and robotics; an aquarium, an aviary and a butterfly park; as well as other facilities.</string>
    <string name="Thol">Thol</string>
    <string name="TholInfo">Thol Lake is an artificial lake near Thol village in Kadi in Mehsana District in the Indian state of Gujarat. A fresh water lake surrounded by marshes, it was built as an irrigation tank in 1912. Declared the Thol Bird Sanctuary in 1988, it is a habitat to 150 species of birds, about 60% of them waterbirds. Many migratory birds nest and breed in the lake and its periphery. The two most prominent species of birds recorded in the sanctuary are flamingoes and sarus crane (Grus antigone).</string>
    <string name="RaceCourse">Race Course</string>
    <string name="RaceCourseInfo">Race Course Grounds in Rajkot is a well-known area that offers a variety of activities and facilities.These expansive grounds serve as a hub for sports and cultural events.Indoor Stadium: Built to match Olympic standards.Outdoor Sports Grounds: Used for football, hockey, volleyball, and more.It’s a good place to visit when you’re in Rajkot.The grounds are sort of the center of the city, providing various activities and even a fun park</string>
    <string name="Pradhayuman">Pradhayuman Park</string>
    <string name="PradhayumanInfo">Pradhyuman Zoological Park, also known as the Rajkot Prani Sanghralaya, is situated near Lalpari Lake in Rajkot, Gujarat. Covering an expansive area of 137 acres, this zoological park attracts both locals and tourists. It serves as a popular picnic spot for excursions and school tours.The park boasts two picturesque lakes: Lake Lalpari and Lake Randarda, which provide a natural habitat for migratory birds. </string>
    <string name="NyariDam">Nyari Dam</string>
    <string name="NyariDamInfo">Natural Beauty: Surrounded by lush greenery, Nyari Dam offers a serene backdrop. Birdwatchers can delight in spotting migratory birds like storks, egrets, and pelicans. Picnic Spot: Locals often visit Nyari Dam for picnics due to its pleasant climate and picturesque surroundings. Sunset Views: Witnessing magical sunsets from the dam is a memorable experience. Garden: At the entrance, there’s a 5-acre lush green garden where visitors can relax and enjoy the natural beauty.</string>
    <string name="RamVan">Ram Van</string>
    <string name="RamVanInfo">Ram Van is a unique place that vividly brings to life the 14-year exile of Lord Rama. Spread across 47 acres of urban forest, Ram Van is a captivating exploration of Lord Rama’s journey. Here are the key highlights:Statues of Lord Rama: Ram Van features a 30-foot tall statue of Lord Rama, visible from several kilometers away. Elaborate sculptures depicting various events from Lord Rama’s life have been meticulously created here.Ram Setu (Bridge): featuring a zodiac-themed forest (Rashi Van) and a grand entrance gate shaped like a bow and arrow.</string>
    <string name="GandhiMuseum">Mahatma Gandhi Museum</string>
    <string name="GandhiMuseumInfo">The Mahatma Gandhi Museum (MGM) in Rajkot, Gujarat, pays homage to the “Father of the Nation,” Mahatma Gandhi. This museum beautifully traces Gandhiji’s journey from “Mohandas” to “Mahatma” through various galleries, showcasing pivotal life events and employing 3D projections1. Let’s delve into more details:MGM aims to present Gandhiji’s transformation by highlighting his core principles of “Satya” (Truth) and “Ahimsa” (Non-Violence). </string>
    <string name="ViewPoint">View Point</string>
    <string name="ViewPlaces">View Places</string>
    <string name="ViewPlace">View Place</string>
    <string name="Museum">Museum</string>
    <string name="Sanctuary">Sanctuary</string>
    <string name="Lake">Lake</string>
    <string name="ViewWatchList">View Watch List</string>
    <string name="WatchList">Watch List</string>
    <string name="SelectState">Select State</string>
    <string name="SelectCity">Select City</string>
    <string name="Gujarat">Gujarat</string>
    <string name="Rajasthan">Rajasthan</string>
    <string name="Punjab">Punjab</string>
    <string name="Maharashtra">Maharashtra</string>
    <string name="Goa">Goa</string>
    <string name="Rajkot">Rajkot</string>
    <string name="Ahmedabad">Ahmedabad</string>
    <string name="GandhiNagar">Gandhi Nagar</string>
    <string name="Jamnagar">Jamnagar</string>
    <string name="Junagadh">Junagadh</string>
    <string name="SearchForPlace">Search For Place</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="EnterMoNo">Enter Your Mobile NO.</string>
    <string name="EnterPass">Enter Your Password</string>
    <string name="EnterName">Enter Your Name.</string>
    <string name="EnterEmail">Enter Your Email.</string>
    <string name="ReEnterPass">Re-enter Your password.</string>
    <string name="EnterPin">Enter Your Pin Code.</string>
    <string name="ForYourTrip">Welcome To For Your Trip</string>
    <string name="ForgetDetails">Forget Your Login Details?</string>

</resources>