<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/logo"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_margin="8dp"
        android:hint="@string/EnterMoNo"
        android:background="@drawable/edittext_outline"
        android:textColorHint="#BAB6B6"
        android:textColor="@color/black"
        android:inputType="phone"
        android:textStyle="bold"
        android:id="@+id/mobileNo"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:hint="@string/EnterPass"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        android:background="@drawable/edittext_outline"
        android:textColorHint="#BAB6B6"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:id="@+id/login"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/ForgetDetails"
        android:id="@+id/txtView"/>


</LinearLayout>