<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="@dimen/_100sdp"
            android:backgroundTint="#EDE5E5"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/textView"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:textColor="#000"
            android:text="@string/ForYourTrip"/>


        <Button
            android:id="@+id/login"
            android:layout_width="130dp"
            android:textSize="20dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/login"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="130dp"
            android:textSize="20dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/sign_up"/>

</LinearLayout>