<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/logo"/>

    <AutoCompleteTextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_margin="8dp"
        android:hint="@string/SelectState"
        android:background="@drawable/edittext_outline"
        android:textColorHint="#BAB6B6"
        android:textColor="@color/black"
        android:inputType="text"
        android:textStyle="bold"
        android:id="@+id/selectState"/>

    <AutoCompleteTextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:hint="@string/SelectCity"
        android:inputType="text"
        android:layout_margin="8dp"
        android:background="@drawable/edittext_outline"
        android:textColorHint="#BAB6B6"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/selectCity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/ViewPlaces"
        android:backgroundTint="#2167F4"
        android:layout_marginTop="20dp"
        android:id="@+id/vP"
        android:textSize="20dp"/>



</LinearLayout>