<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Pradhyuman">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/Pradhayuman"

                android:textColor="@color/black"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="@dimen/_340sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/loutData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_230sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_15sdp" />



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_20sdp">



                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
            <LinearLayout
                android:id="@+id/loutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/PradhayumanInfo"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/ViewPlace"
                android:id="@+id/pp"/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>